--- a/package.json
+++ b/package.json
@@ -24,5 +24,8 @@
     "eslint-plugin-react-refresh": "^0.4.14",
     "globals": "^15.11.0",
     "vite": "^5.4.10"
+  },
+  "engines": {
+    "node": "16.x"
   }
 }
